@@ -1,36 +1,71 @@
 package com.springboot.MyTodoList.controller;
 
 import com.springboot.MyTodoList.model.AppUser;
-import com.springboot.MyTodoList.security.JwtService;
-import com.springboot.MyTodoList.service.AppUserService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
+import com.springboot.MyTodoList.security.JWTUtil;
+import com.springboot.MyTodoList.repository.AppUserRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Collections;
 import java.util.Map;
 
 @RestController
 @RequestMapping("/api/auth")
-@RequiredArgsConstructor
 public class AuthController {
 
-    private final AppUserService userService;
-    private final PasswordEncoder passwordEncoder;
-    private final JwtService jwtService;
+    @Autowired
+    private AppUserRepository userRepository;
+
+    @Autowired
+    private JWTUtil jwtUtil;
+
+    @Autowired
+    private AuthenticationManager authenticationManager;
+
+    @Autowired
+    private PasswordEncoder passwordEncoder;
+
+    @PostMapping("/register")
+    public Map<String, Object> registerHandler(
+            @RequestBody AppUser user
+            ){
+        if (userRepository.existsByUsername(user.getUsername())) {
+            throw new IllegalArgumentException("Username already exists");
+        }
+        if (userRepository.existsByEmail(user.getEmail())) {
+            throw new IllegalArgumentException("Email already exists");
+        }
+        
+        String encodedPass = passwordEncoder.encode(user.getPassword());
+        user.setPassword(encodedPass);
+        user = userRepository.save(user);
+
+        String token = jwtUtil.generateToken(user.getUsername());
+        return Collections.singletonMap("jwt-token",token);
+    }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody Map<String, String> credentials) {
-        String username = credentials.get("username");
-        String password = credentials.get("password");
+    public Map<String,Object> loginHandler(
+            @RequestBody Map<String, String> credentials
+            ){
+        try{
+            UsernamePasswordAuthenticationToken authInputToken =
+                    new UsernamePasswordAuthenticationToken(credentials.get("username"), credentials.get("password"));
+            authenticationManager.authenticate(authInputToken);
 
-        AppUser user = userService.getUserByUsername(username).orElse(null);
-
-        if (user == null || !passwordEncoder.matches(password, user.getPassword())) {
-            return ResponseEntity.status(401).body(Map.of("error", "Credenciales inválidas"));
+            String token = jwtUtil.generateToken(credentials.get("username"));
+            return Collections.singletonMap("jwt-token",token);
+        } catch(AuthenticationException authExc){
+            throw new RuntimeException("Invalid username/password.");
         }
 
-        String token = jwtService.generateToken(username);
-        return ResponseEntity.ok(Map.of("token", token, "username", username));
     }
+
 }
